--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,7 +660,7 @@ section {
 
 #header.header-scrolled {
   background:#5A6439;
-  height: 60px;
+  height: 80px;
 }
 
 #header .logo h1 {
@@ -678,7 +678,8 @@ section {
 
 #header .logo img {
   padding: 0;
-  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 5px;
   max-height: 80px;
 }
 
